<resources>
    <string name="app_name">Snapceit</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="activate_camera">Activate camera</string>
    <string name="activate_gallery">Activate gallery</string>
    <string name="processing_receipt">Processing Receipt…</string>
    <string name="settings">Settings</string>
    <string name="assign">Assign</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_users">Select users to split item</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_item">Add item</string>
    <string name="confirm">Confirm</string>
    <string name="add_tax">Add Tax</string>
    <string name="actions">Actions</string>
    <string name="zero_dollars">$0.00</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
</resources>